<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">MySunshine</string>
    <string name="main_title_text">Today, some date</string>
    <string name="action_settings">Settings</string>
    <string name="openweather_appid">ab18a306892069efe62fdcc99b61d1a0</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->
    <string name="pref_key_units">units</string>
    <string name="pref_title_units">Temperature units</string>
    <string name="pref_default_units">Metric</string>
    <string name="pref_key_location">location</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">10006</string>
    <string name="pref_key_notification">showNotifications</string>
    <string name="pref_title_notification">Show Notifications</string>
    <string name="pref_default_notification">true</string>

    <string name="action_map">Map Location</string>
    <string name="menu_item_title_share">Share</string>
    <string name="app_hashtag">#MySunshine</string>
    <string name="pref_units_imperial">imperial</string>
    <string name="pref_units_metric">metric</string>
    <string name="details_loading">Loading…</string>
    <string name="list_item_date_today">TODAY</string>
    <string name="list_item_date_tomorrow">TOMORROW</string>
    
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g>\%</string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_wind">Wind: <xliff:g id="wind">%1.0f</xliff:g> km/h %s</string>
    <string name="direction_n">N</string>
    <string name="direction_ne">NE</string>
    <string name="direction_e">E</string>
    <string name="direction_se">SE</string>
    <string name="direction_s">S</string>`
    <string name="detail_view_title">Details</string>
    <string name="content_authority">com.supdev.igor.mysunshine.app</string>
    <string name="sync_account_type">mysunshine.supdev.com</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>
    <string name="notification_today_title">MySunshine: Today Forecast</string>
</resources>
